<?xml version="1.0"?>
<package format="2">
  <name>occlusion_mapping_msgs</name>
  <version>0.0.0</version>
  <description>Occlusionmap messages</description>

    <maintainer email="ddamm@fu-berlin.de">FU Berlin</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="ddamm@fu-berlin.de">David Damm</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>


  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
